# ovh_dns_updater

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/ovh/: client.rs
src/ovh_dns_updater/: generic_ip_addr.rs  mod.rs  ovh_dns_updater_error.rs  ovh_domain_response_obj.rs
src/public_ip_retriever/: check_ip_format.rs  generic_ip_types.rs  ident_me_retriever.rs  ip_me_retriever.rs  ipify_retriever.rs  lafibre_info_retriever.rs  mod.rs  public_ip_retriever_error.rs
