[package]
name = "ovh_dns_updater"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Prévost"]
description = "Update OVH DNS records with your public IPv4 address and/or IPv6 address"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.18", features=["json"]}
tokio = {version="1.28.2", features = ["macros", "rt", "rt-multi-thread"]}
futures = "0.3.28"
async-trait = "0.1.68"
serde = {version="1.0.163", features=["derive"]}
serde_json = "1.0.96"
thiserror = "1.0.40"
addr = "0.15.6"
dotenv = "0.15.0"
sha1 = {version="0.6.0", features=["std"]}
phf = {version="0.11.1", features=["macros"]}
clap = {version = "4.3.1", features = ["derive"]}